--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div>
         my index  page 
 
-        <a href="/pages/01.html" target="_blank"></a>
+        <a href="/pages/01.html" target="_blank">01</a>
     </div>
     
 </body>
