--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
     <div>
         my index  page 
-
-        <a href="/pages/01.html" target="_blank">01</a>
+        <a href="https://darclsr.github.io/iwan_css_github.io/pages/01.html" target="_blank">01</a>
     </div>
     
 </body>
