navgation && social menus

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <li >
                     <a href="./pages/circular_menu.html" alt="底部导航栏">navgation</a>
                 </li>
+                <li >
+                    <a href="./pages/social.html" alt="社交创意菜单">social</a>
+                </li>
             </ul>
            
         </div>
