navgation && social menus

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <a href="./pages/circular_menu.html" alt="圆形菜单">circular_menu</a>
                 </li>
                 <li >
-                    <a href="./pages/circular_menu.html" alt="底部导航栏">navgation</a>
+                    <a href="./pages/navgation.html" alt="底部导航栏">navgation</a>
                 </li>
                 <li >
                     <a href="./pages/social.html" alt="社交创意菜单">social</a>
