--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <li >
             <a href="./pages/social.html" alt="社交创意菜单">social</a>
         </li>
+        <li >
+            <a href="./pages/cube.html" alt="灯光3d盒子">light cube</a>
+        </li>
     </nav>
      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
